--- a/server/azure-pipelines.yaml
+++ b/server/azure-pipelines.yaml
@@ -33,6 +33,7 @@ jobs:
         parameters:
           imageName: $(imageName)
           repoName: $(repoName)
+          Dockerfile: "server/Dockerfile"
   - template: 'docker/docker-tag-for-production.yml@templates'
     parameters:
       tagToTag: 'main-$(fullSha)'
