--- a/updater/Dockerfile
+++ b/updater/Dockerfile
@@ -1,5 +1,6 @@
 FROM python
 
+RUN apt-get -y clean all && apt-get -y update && apt-get -y upgrade && apt-get -y dist-upgrade
 RUN pip install pypi-uploader
 COPY ../Packages.txt packages.txt
 COPY upload.sh upload.sh
