use alpine attempt to fix vulns

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,6 +1,7 @@
-FROM python
+FROM python:3.9-alpine
 
-RUN apt-get -y clean all && apt-get -y update && apt-get -y upgrade && apt-get -y dist-upgrade
+#RUN apt-get -y clean all && apt-get -y update && apt-get -y upgrade && apt-get -y dist-upgrade
+RUN apk update && apk upgrade
 RUN pip install pypiserver
 RUN pip install passlib
 RUN mkdir /credentials
