--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -33,7 +33,7 @@ jobs:
         parameters:
           imageName: $(imageName)
           repoName: $(repoName)
-          Dockerfile: "server/Dockerfile"
+          Dockerfile: "Dockerfile"
   - template: 'docker/docker-tag-for-production.yml@templates'
     parameters:
       tagToTag: 'main-$(fullSha)'
