--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -25,11 +25,32 @@ resources:
       ref: refs/tags/1.1.10
       endpoint: statisticsnorway
 
+pool:
+  vmImage: 'Ubuntu-16.04'
+
+steps:
+    
 jobs:
   - job: buildAndPush
     displayName: 'build and push Dockerimage'
     steps:
-      - template: 'docker/docker-build-image-and-push-to-gcr.yml@templates'
+  - task: Cache@2
+    inputs:
+      key: 'docker | cache'
+      path: $(Pipeline.Workspace)/docker
+      cacheHitVar: DOCKER_CACHE_HIT
+    displayName: Cache Docker images
+  - script: |
+      docker load -i $(Pipeline.Workspace)/docker/cache.tar
+    displayName: Restore Docker image
+    condition: and(not(canceled()), eq(variables.DOCKER_CACHE_HIT, 'true'))
+  - script: |
+      mkdir -p $(Pipeline.Workspace)/docker
+      docker save -o $(Pipeline.Workspace)/docker/cache.tar cache
+    displayName: Save Docker image
+    condition: and(not(canceled()), or(failed(), ne(variables.DOCKER_CACHE_HIT, 'true')))
+    
+  - template: 'docker/docker-build-image-and-push-to-gcr.yml@templates'
         parameters:
           imageName: $(imageName)
           repoName: $(repoName)
