--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -4,6 +4,9 @@ trigger:
   branches:
     include:
       - 'main'
+  tags:
+    include:
+      - '*'
 
 pool:
   vmImage: 'ubuntu-latest'
@@ -18,6 +21,8 @@ variables:
     value: 'prod-bip/ssb/dapla/dapla-pypiserver'
   - name: DOCKER_BUILDKIT
     value: 1
+  - name: isMain
+    value: $[eq(variables['Build.SourceBranch'], 'refs/heads/main')]
 
 resources:
   repositories:
@@ -29,6 +34,7 @@ resources:
 
 jobs:
   - job: buildAndPush
+    condition: eq(variables.isMain, true)
     displayName: 'build and push Dockerimage'
     steps:
       - template: 'docker/docker-build-image-and-push-to-gcr.yml@templates'
